<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/footer2" />

    <EditText
        android:id="@+id/oldP"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:hint="Inserisci password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/newPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:hint="Inserisci nuova password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/okP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="OK"/>

    <Button
        android:id="@+id/annullaP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Annulla"/>

    <ImageView
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/footer2" />

</LinearLayout>