...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/marck_script"
        android:letterSpacing="0.03"
        android:text="Login"
        android:textColor="#CF8A00"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:id="@+id/emailText"
        android:hint="Email"
        android:textColor="#BC8D30"
        android:background="@drawable/forget"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:id="@+id/passwordText"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#A6881B"
        android:background="@drawable/forget"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/log"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#E88E07"
        android:fontFamily="@font/armata"
        android:text="Login"
...
